--- a/index.html
+++ b/index.html
@@ -1,14 +1,54 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Portfolio Website</title>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="style.css">
+
+  <title>Portfolio Website</title>
 </head>
+
 <body>
-    <h1>
-        Hi my name is Nabeel. Hello Microverse
-    </h1>
+
+  <header id="toolbar">
+    <nav>
+      <img src="/Pictures/My Logo.png" alt="">
+      <img src="/Pictures/Union.png" alt="">
+    </nav>
+  </header>
+
+
+  <div class="hero">
+    <div class="hero-container">
+      <h1>
+        I'm Nabeel
+        <br>
+        Glad to see
+        <br>
+        you!
+      </h1>
+
+      <p>
+        I'm a software developer! I can help you build a product, feature or website look through some of my work and
+        experience! If you like what you see and have a project you need coded, don't hesitate to contact me.
+      </p>
+
+      <h6>
+        LET'S CONNECT
+      </h6>
+      <div class="social-container">
+        <img src="/Pictures/Social/twitter.png" alt="" class="social">
+        <img src="/Pictures/Social/linkedin.png" alt="" class="social">
+        <img src="/Pictures/Social/m.png" alt="" class="social">
+        <img src="/Pictures/Social/github.png" alt="" class="social">
+        <img src="/Pictures/Social/victory.png" alt="" class="social">
+      </div>
+
+    </div>
+  </div>
+
 </body>
+
 </html>
