Improve HTML semantics and fixed background image

--- a/index.html
+++ b/index.html
@@ -12,37 +12,47 @@
   <body>
     <header id="toolbar">
       <nav>
-        <img src="/Pictures/My Logo.png" alt="" />
-        <img src="/Pictures/Union.png" alt="" />
+        <a href=""><img src="/Pictures/My Logo.png" alt="" /> </a>
+        <a href="">
+          <img src="/Pictures/Union.png" alt="Menu bar" />
+        </a>
       </nav>
     </header>
 
-    <div class="hero">
-      <div class="hero-container">
-        <h1>
-          I'm Nabeel
-          <br />
-          Glad to see
-          <br />
-          you!
-        </h1>
+    <section class="hero">
+      <h1>
+        I'm Nabeel
+        <br />
+        Glad to see
+        <br />
+        you!
+      </h1>
 
-        <p>
-          I'm a software developer! I can help you build a product, feature or
-          website look through some of my work and experience! If you like what
-          you see and have a project you need coded, don't hesitate to contact
-          me.
-        </p>
+      <p>
+        I'm a software developer! I can help you build a product, feature or
+        website look through some of my work and experience! If you like what
+        you see and have a project you need coded, don't hesitate to contact me.
+      </p>
 
-        <h6>LET'S CONNECT</h6>
-        <div class="social-container">
-          <img src="/Pictures/Social/twitter.png" alt="" class="social" />
-          <img src="/Pictures/Social/linkedin.png" alt="" class="social" />
-          <img src="/Pictures/Social/m.png" alt="" class="social" />
-          <img src="/Pictures/Social/github.png" alt="" class="social" />
-          <img src="/Pictures/Social/victory.png" alt="" class="social" />
-        </div>
-      </div>
-    </div>
+      <h6>LET'S CONNECT</h6>
+
+      <ul class="social-container">
+        <li>
+          <a href=""><img src="/Pictures/Social/twitter.png" alt="" /></a>
+        </li>
+        <li>
+          <a href=""><img src="/Pictures/Social/linkedin.png" alt="" /></a>
+        </li>
+        <li>
+          <a href=""><img src="/Pictures/Social/m.png" alt="" /></a>
+        </li>
+        <li>
+          <a href=""><img src="/Pictures/Social/github.png" alt="" /></a>
+        </li>
+        <li>
+          <a href=""><img src="/Pictures/Social/victory.png" alt="" /></a>
+        </li>
+      </ul>
+    </section>
   </body>
 </html>
