Add html for Work section

--- a/index.html
+++ b/index.html
@@ -54,5 +54,116 @@
         </li>
       </ul>
     </section>
+
+    <section class="work">
+      <article class="card">
+        <a href="" class="snapshot">
+          <img src="/Worksection Pics/snap1.png" alt="" />
+        </a>
+        <ul>
+          <li>
+            <h1>Tonic</h1>
+            <div class="frame">
+              <a href="">Canopy</a>
+              <a href=""><img src="/Worksection Pics/Counter.png" alt="" /></a>
+              <a href="">Backend dev</a>
+              <a href=""><img src="/Worksection Pics/Counter.png" alt="" /></a>
+              <a href="">2015</a>
+            </div>
+          </li>
+          <li>
+            <p>
+              A daily selection of privately personalized reads; no accounts or
+              sign-ups required.
+            </p>
+          </li>
+          <li>
+            <a href=""> html </a><a href=""> css </a><a href=""> javascript </a>
+          </li>
+          <li><button>see roject</button></li>
+        </ul>
+      </article>
+      <article class="card">
+        <a href="" class="snapshot">
+          <img src="/Worksection Pics/snap1.png" alt="" />
+        </a>
+        <ul>
+          <li>
+            <h1>Tonic</h1>
+            <div class="frame">
+              <a href="">Canopy</a>
+              <a href=""><img src="/Worksection Pics/Counter.png" alt="" /></a>
+              <a href="">Backend dev</a>
+              <a href=""><img src="/Worksection Pics/Counter.png" alt="" /></a>
+              <a href="">2015</a>
+            </div>
+          </li>
+          <li>
+            <p>
+              A daily selection of privately personalized reads; no accounts or
+              sign-ups required.
+            </p>
+          </li>
+          <li>
+            <a href=""> html </a><a href=""> css </a><a href=""> javascript </a>
+          </li>
+          <li><button>see roject</button></li>
+        </ul>
+      </article>
+      <article class="card">
+        <a href="" class="snapshot">
+          <img src="/Worksection Pics/snap1.png" alt="" />
+        </a>
+        <ul>
+          <li>
+            <h1>Tonic</h1>
+            <div class="frame">
+              <a href="">Canopy</a>
+              <a href=""><img src="/Worksection Pics/Counter.png" alt="" /></a>
+              <a href="">Backend dev</a>
+              <a href=""><img src="/Worksection Pics/Counter.png" alt="" /></a>
+              <a href="">2015</a>
+            </div>
+          </li>
+          <li>
+            <p>
+              A daily selection of privately personalized reads; no accounts or
+              sign-ups required.
+            </p>
+          </li>
+          <li>
+            <a href=""> html </a><a href=""> css </a><a href=""> javascript </a>
+          </li>
+          <li><button>see roject</button></li>
+        </ul>
+      </article>
+      <article class="card">
+        <a href="" class="snapshot">
+          <img src="/Worksection Pics/snap1.png" alt="" />
+        </a>
+        <ul>
+          <li>
+            <h1>Tonic</h1>
+            <div class="frame">
+              <a href="">Canopy</a>
+              <a href=""><img src="/Worksection Pics/Counter.png" alt="" /></a>
+              <a href="">Backend dev</a>
+              <a href=""><img src="/Worksection Pics/Counter.png" alt="" /></a>
+              <a href="">2015</a>
+            </div>
+          </li>
+          <li>
+            <p>
+              A daily selection of privately personalized reads; no accounts or
+              sign-ups required.
+            </p>
+          </li>
+          <li>
+            <a href=""> html </a><a href=""> css </a><a href=""> javascript </a>
+          </li>
+          <li><button>see roject</button></li>
+        </ul>
+      </article>
+    </section>
   </body>
 </html>
