Add Hover over icons

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
         </a>
         <ul class="leftblock">
           <li .primarytext>
-            <h1>Tonic</h1>
+            <h2>Tonic</h2>
             <div class="frame">
               <a href="" class="client"><h6 class="clienttext">Canopy</h6></a>
               <a href=""><img src="/Worksection Pics/Counter.png" alt="" /></a>
@@ -93,7 +93,7 @@
         </a>
         <ul class="leftblock2">
           <li .primarytext>
-            <h1>Multi-Post Stories</h1>
+            <h2>Multi-Post Stories</h2>
             <div class="frame">
               <a href="" class="client"><h6 class="clienttext">Canopy</h6></a>
               <a href=""><img src="/Worksection Pics/Counter.png" alt="" /></a>
@@ -124,7 +124,7 @@
         </a>
         <ul class="leftblock">
           <li .primarytext>
-            <h1>Tonic</h1>
+            <h2>Tonic</h2>
             <div class="frame">
               <a href="" class="client"><h6 class="clienttext">Canopy</h6></a>
               <a href=""><img src="/Worksection Pics/Counter.png" alt="" /></a>
@@ -155,7 +155,7 @@
         </a>
         <ul class="leftblock2">
           <li .primarytext>
-            <h1>Multi-Post Stories</h1>
+            <h2>Multi-Post Stories</h2>
             <div class="frame">
               <a href="" class="client"><h6 class="clienttext">Canopy</h6></a>
               <a href=""><img src="/Worksection Pics/Counter.png" alt="" /></a>
@@ -182,10 +182,10 @@
       </article>
     </section>
     <section class="about">
-      <h1>
+      <h2>
         About <br />
         Myself
-      </h1>
+      </h2>
 
       <p>
         Hello I’m a software developer! I can help you build a product , feature
@@ -213,6 +213,41 @@
         </li>
       </ul>
       <button class="btn1">Get my resume</button>
+      <section class="languages">
+        <h3>Languages</h3>
+        <ul>
+          <li>
+            <a href="">
+              <img src="/Languages Pictures/JS.png" alt="" />
+              <h4>javascript</h4>
+            </a>
+          </li>
+          <li>
+            <a href="">
+              <img src="/Languages Pictures/HTML.png" alt="" />
+              <h4>Html</h4>
+            </a>
+          </li>
+          <li>
+            <a href="">
+              <img src="/Languages Pictures/CSS.png" alt="" />
+              <h4>Css</h4>
+            </a>
+          </li>
+          <li>
+            <a class="arrow" href=""
+              ><h5>Frameworks</h5>
+              <h4>></h4></a
+            >
+          </li>
+          <li>
+            <a class="arrow" href=""
+              ><h5>Skills</h5>
+              <h4>></h4></a
+            >
+          </li>
+        </ul>
+      </section>
     </section>
   </body>
 </html>
