Add languages section with HTML and CSS

--- a/index.html
+++ b/index.html
@@ -71,19 +71,19 @@
               <a href="" class="year"><h6 class="yeartext">2015</h6></a>
             </div>
           </li>
-          <li>
-            <p>
-              A daily selection of privately personalized reads; no accounts or
-              sign-ups required.
-            </p>
-          </li>
+
+          <p>
+            A daily selection of privately personalized reads; no accounts or
+            sign-ups required.
+          </p>
+
           <li class="tags">
             <a href="" class="tag1"><h6>html</h6> </a
             ><a href="" class="tag2"><h6>css</h6> </a
             ><a href="" class="tag3"><h6>javascript</h6> </a>
           </li>
           <li class="btn">
-            <button><h6>See Project</h6></button>
+            <a><h6>See Project</h6></a>
           </li>
         </ul>
       </article>
@@ -102,19 +102,19 @@
               <a href="" class="year"><h6 class="yeartext">2015</h6></a>
             </div>
           </li>
-          <li>
-            <p>
-              A daily selection of privately personalized reads; no accounts or
-              sign-ups required.
-            </p>
-          </li>
+
+          <p>
+            A daily selection of privately personalized reads; no accounts or
+            sign-ups required.
+          </p>
+
           <li class="tags">
             <a href="" class="tag1"><h6>html</h6> </a
             ><a href="" class="tag2"><h6>css</h6> </a
             ><a href="" class="tag3"><h6>javascript</h6> </a>
           </li>
           <li class="btn">
-            <button><h6>See Project</h6></button>
+            <a><h6>See Project</h6></a>
           </li>
         </ul>
       </article>
@@ -133,19 +133,19 @@
               <a href="" class="year"><h6 class="yeartext">2015</h6></a>
             </div>
           </li>
-          <li>
-            <p>
-              A daily selection of privately personalized reads; no accounts or
-              sign-ups required.
-            </p>
-          </li>
+
+          <p>
+            A daily selection of privately personalized reads; no accounts or
+            sign-ups required.
+          </p>
+
           <li class="tags">
             <a href="" class="tag1"><h6>html</h6> </a
             ><a href="" class="tag2"><h6>css</h6> </a
             ><a href="" class="tag3"><h6>javascript</h6> </a>
           </li>
           <li class="btn">
-            <button><h6>See Project</h6></button>
+            <a><h6>See Project</h6></a>
           </li>
         </ul>
       </article>
@@ -164,19 +164,19 @@
               <a href="" class="year"><h6 class="yeartext">2015</h6></a>
             </div>
           </li>
-          <li>
-            <p>
-              A daily selection of privately personalized reads; no accounts or
-              sign-ups required.
-            </p>
-          </li>
+
+          <p>
+            A daily selection of privately personalized reads; no accounts or
+            sign-ups required.
+          </p>
+
           <li class="tags">
             <a href="" class="tag1"><h6>html</h6> </a
             ><a href="" class="tag2"><h6>css</h6> </a
             ><a href="" class="tag3"><h6>javascript</h6> </a>
           </li>
           <li class="btn">
-            <button><h6>See Project</h6></button>
+            <a><h6>See Project</h6></a>
           </li>
         </ul>
       </article>
@@ -212,41 +212,36 @@
           <a href=""><img src="/Pictures/Social/m.png" alt="" /></a>
         </li>
       </ul>
-      <button class="btn1">Get my resume</button>
+      <a class="btn1">Get my resume</a>
       <section class="languages">
         <h3>Languages</h3>
-        <ul>
-          <li>
-            <a href="">
-              <img src="/Languages Pictures/JS.png" alt="" />
-              <h4>javascript</h4>
-            </a>
-          </li>
-          <li>
-            <a href="">
-              <img src="/Languages Pictures/HTML.png" alt="" />
-              <h4>Html</h4>
-            </a>
-          </li>
-          <li>
-            <a href="">
-              <img src="/Languages Pictures/CSS.png" alt="" />
-              <h4>Css</h4>
-            </a>
-          </li>
-          <li>
-            <a class="arrow" href=""
-              ><h5>Frameworks</h5>
-              <h4>></h4></a
-            >
-          </li>
-          <li>
-            <a class="arrow" href=""
-              ><h5>Skills</h5>
-              <h4>></h4></a
-            >
-          </li>
-        </ul>
+        <img
+          src="/Languages Pictures/02_1_-_Arrows_line_black_1-14.jpg"
+          alt=""
+          class="down-arrow"
+        />
+        <div class="frame" id="lang">
+          <a href=""><img src="/Languages Pictures/JS.png" alt="" /></a>
+          <a href=""><h6>Javascript</h6></a>
+        </div>
+        <div class="frame" id="lang">
+          <a href=""><img src="/Languages Pictures/HTML.png" alt="" /></a>
+          <a href=""><h6>HTML</h6></a>
+        </div>
+        <div class="frame" id="lang">
+          <a href=""><img src="/Languages Pictures/CSS.png" alt="" /></a>
+          <a href=""><h6>CSS</h6></a>
+        </div>
+        <div class="frame" id="other-lang">
+          <a href="" class="lang-text"><h6>Frameworks</h6></a>
+          <a href=""><h6 class="arrow">></h6></a>
+        </div>
+        <img src="/Languages Pictures/Separator Bottom.png" alt="" />
+        <div class="frame" id="other-lang">
+          <a href="" class="lang-text"><h6>Skills</h6></a>
+          <a href=""><h6 class="arrow2">></h6></a>
+        </div>
+        <img src="/Languages Pictures/Separator Bottom.png" alt="" />
       </section>
     </section>
   </body>
