Add correct Hover and Press color for the button

--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
             ><a href="" class="tag3"><h6>javascript</h6> </a>
           </li>
           <li class="btn">
-            <a><h6>See Project</h6></a>
+            <a>See Project</a>
           </li>
         </ul>
       </article>
@@ -114,7 +114,7 @@
             ><a href="" class="tag3"><h6>javascript</h6> </a>
           </li>
           <li class="btn">
-            <a><h6>See Project</h6></a>
+            <a>See Project</a>
           </li>
         </ul>
       </article>
@@ -145,7 +145,7 @@
             ><a href="" class="tag3"><h6>javascript</h6> </a>
           </li>
           <li class="btn">
-            <a><h6>See Project</h6></a>
+            <a>See Project</a>
           </li>
         </ul>
       </article>
@@ -176,7 +176,7 @@
             ><a href="" class="tag3"><h6>javascript</h6> </a>
           </li>
           <li class="btn">
-            <a><h6>See Project</h6></a>
+            <a>See Project</a>
           </li>
         </ul>
       </article>
@@ -213,35 +213,51 @@
         </li>
       </ul>
       <a class="btn1">Get my resume</a>
+
       <section class="languages">
-        <h3>Languages</h3>
-        <img
-          src="/Languages Pictures/02_1_-_Arrows_line_black_1-14.jpg"
-          alt=""
-          class="down-arrow"
-        />
-        <div class="frame" id="lang">
-          <a href=""><img src="/Languages Pictures/JS.png" alt="" /></a>
-          <a href=""><h6>Javascript</h6></a>
+        <div class="lang-divs">
+          <h3>Languages</h3>
+          <div class="lang-arrow-down"></div>
         </div>
-        <div class="frame" id="lang">
-          <a href=""><img src="/Languages Pictures/HTML.png" alt="" /></a>
-          <a href=""><h6>HTML</h6></a>
+
+        <div class="lang-divs" id="lang">
+          <img src="/Languages Pictures/JS.png" alt="" />
+          <h6>Javascript</h6>
         </div>
-        <div class="frame" id="lang">
-          <a href=""><img src="/Languages Pictures/CSS.png" alt="" /></a>
-          <a href=""><h6>CSS</h6></a>
+
+        <div class="lang-divs" id="lang">
+          <img src="/Languages Pictures/HTML.png" alt="" />
+          <h6>HTML</h6>
         </div>
-        <div class="frame" id="other-lang">
-          <a href="" class="lang-text"><h6>Frameworks</h6></a>
-          <a href=""><h6 class="arrow">></h6></a>
+
+        <div class="lang-divs" id="lang">
+          <img src="/Languages Pictures/CSS.png" alt="" />
+          <h6>CSS</h6>
         </div>
-        <img src="/Languages Pictures/Separator Bottom.png" alt="" />
-        <div class="frame" id="other-lang">
-          <a href="" class="lang-text"><h6>Skills</h6></a>
-          <a href=""><h6 class="arrow2">></h6></a>
+
+        <div class="lang-skills">
+          <h3>Frameworks</h3>
+          <div class="lang-arrow-right1"></div>
         </div>
-        <img src="/Languages Pictures/Separator Bottom.png" alt="" />
+        <div class="lang-skills">
+          <img
+            class="lang-seperator"
+            src="/Languages Pictures/Separator Bottom.png"
+            alt=""
+          />
+        </div>
+
+        <div class="lang-skills">
+          <h3>Skills</h3>
+          <div class="lang-arrow-right2"></div>
+        </div>
+        <div class="lang-skills">
+          <img
+            class="lang-seperator"
+            src="/Languages Pictures/Separator Bottom.png"
+            alt=""
+          />
+        </div>
       </section>
     </section>
   </body>
