Add Footer section Heading and description

--- a/index.html
+++ b/index.html
@@ -260,5 +260,14 @@
         </div>
       </section>
     </section>
+    <footer class="contact-me">
+      <h3>Contact me</h3>
+
+      <p>
+        If you have an application you are interested in developing, a feature
+        that you need built or a project that needs coding. I’d love to help
+        with it
+      </p>
+    </footer>
   </body>
 </html>
