--- a/index.html
+++ b/index.html
@@ -268,6 +268,8 @@
         that you need built or a project that needs coding. I’d love to help
         with it
       </p>
+
+      <form action="https://formspree.io/f/xwkzojgo" method="post"></form>
     </footer>
   </body>
 </html>
