Add input name email textarea and submit

--- a/index.html
+++ b/index.html
@@ -269,7 +269,39 @@
         with it
       </p>
 
-      <form action="https://formspree.io/f/xwkzojgo" method="post"></form>
+      <form action="https://formspree.io/f/xwkzojgo" method="post">
+        <input
+          name="namearea"
+          id="input-name"
+          class="input"
+          type="text"
+          maxlength="30"
+          placeholder="Name"
+          required
+        />
+
+        <input
+          name="emailarea"
+          class="input"
+          type="email"
+          placeholder="Email"
+          required
+        />
+
+        <textarea
+          name="textarea"
+          id="textarea"
+          class="input-textarea"
+          name=""
+          cols="30"
+          rows="5"
+          maxlength="500"
+          placeholder="Write you message here"
+          required
+        ></textarea>
+
+        <input class="btn" type="submit" value="Get It Touch" />
+      </form>
     </footer>
   </body>
 </html>
