Add Css style to Footer main container

--- a/index.html
+++ b/index.html
@@ -300,7 +300,7 @@
           required
         ></textarea>
 
-        <input class="btn" type="submit" value="Get It Touch" />
+        <input class="btn" type="submit" value="Get In Touch" />
       </form>
     </footer>
   </body>
