Add correct pathway for the background images in CSS and HTML

--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
   <body>
     <header id="toolbar">
       <nav>
-        <a href=""><img src="/Pictures/My Logo.png" alt="" /> </a>
+        <a href=""><img src="./Pictures/My Logo.png" alt="" /> </a>
         <a href="">
-          <img src="/Pictures/Union.png" alt="Menu bar" />
+          <img src="./Pictures/Union.png" alt="Menu bar" />
         </a>
       </nav>
     </header>
@@ -38,19 +38,19 @@
 
       <ul class="social-container">
         <li>
-          <a href=""><img src="/Pictures/Social/twitter.png" alt="" /></a>
+          <a href=""><img src="./Pictures/Social/twitter.png" alt="" /></a>
         </li>
         <li>
-          <a href=""><img src="/Pictures/Social/linkedin.png" alt="" /></a>
+          <a href=""><img src="./Pictures/Social/linkedin.png" alt="" /></a>
         </li>
         <li>
-          <a href=""><img src="/Pictures/Social/m.png" alt="" /></a>
+          <a href=""><img src="./Pictures/Social/m.png" alt="" /></a>
         </li>
         <li>
-          <a href=""><img src="/Pictures/Social/github.png" alt="" /></a>
+          <a href=""><img src="./Pictures/Social/github.png" alt="" /></a>
         </li>
         <li>
-          <a href=""><img src="/Pictures/Social/victory.png" alt="" /></a>
+          <a href=""><img src="./Pictures/Social/victory.png" alt="" /></a>
         </li>
       </ul>
     </section>
@@ -58,16 +58,16 @@
     <section class="work">
       <article class="card">
         <a href="" class="snapshot">
-          <img src="/Worksection Pics/snap1.png" alt="" />
+          <img src="./Worksection Pics/snap1.png" alt="" />
         </a>
         <ul class="leftblock">
           <li .primarytext>
             <h2>Tonic</h2>
             <div class="frame">
               <a href="" class="client"><h6 class="clienttext">Canopy</h6></a>
-              <a href=""><img src="/Worksection Pics/Counter.png" alt="" /></a>
+              <a href=""><img src="./Worksection Pics/Counter.png" alt="" /></a>
               <a href="" class="role"><h6 class="roletext">Back End Dev</h6></a>
-              <a href=""><img src="/Worksection Pics/Counter.png" alt="" /></a>
+              <a href=""><img src="./Worksection Pics/Counter.png" alt="" /></a>
               <a href="" class="year"><h6 class="yeartext">2015</h6></a>
             </div>
           </li>
@@ -89,16 +89,16 @@
       </article>
       <article class="card">
         <a href="" class="snapshot">
-          <img src="/Worksection Pics/snap2.png" alt="" />
+          <img src="./Worksection Pics/snap2.png" alt="" />
         </a>
         <ul class="leftblock2">
           <li .primarytext>
             <h2>Multi-Post Stories</h2>
             <div class="frame">
               <a href="" class="client"><h6 class="clienttext">Canopy</h6></a>
-              <a href=""><img src="/Worksection Pics/Counter.png" alt="" /></a>
+              <a href=""><img src="./Worksection Pics/Counter.png" alt="" /></a>
               <a href="" class="role"><h6 class="roletext">Back End Dev</h6></a>
-              <a href=""><img src="/Worksection Pics/Counter.png" alt="" /></a>
+              <a href=""><img src="./Worksection Pics/Counter.png" alt="" /></a>
               <a href="" class="year"><h6 class="yeartext">2015</h6></a>
             </div>
           </li>
@@ -120,16 +120,16 @@
       </article>
       <article class="card">
         <a href="" class="snapshot">
-          <img src="/Worksection Pics/snap3.png" alt="" />
+          <img src="./Worksection Pics/snap3.png" alt="" />
         </a>
         <ul class="leftblock">
           <li .primarytext>
             <h2>Tonic</h2>
             <div class="frame">
               <a href="" class="client"><h6 class="clienttext">Canopy</h6></a>
-              <a href=""><img src="/Worksection Pics/Counter.png" alt="" /></a>
+              <a href=""><img src="./Worksection Pics/Counter.png" alt="" /></a>
               <a href="" class="role"><h6 class="roletext">Back End Dev</h6></a>
-              <a href=""><img src="/Worksection Pics/Counter.png" alt="" /></a>
+              <a href=""><img src="./Worksection Pics/Counter.png" alt="" /></a>
               <a href="" class="year"><h6 class="yeartext">2015</h6></a>
             </div>
           </li>
@@ -151,16 +151,16 @@
       </article>
       <article class="card">
         <a href="" class="snapshot">
-          <img src="/Worksection Pics/snap4.png" alt="" />
+          <img src="./Worksection Pics/snap4.png" alt="" />
         </a>
         <ul class="leftblock2">
           <li .primarytext>
             <h2>Multi-Post Stories</h2>
             <div class="frame">
               <a href="" class="client"><h6 class="clienttext">Canopy</h6></a>
-              <a href=""><img src="/Worksection Pics/Counter.png" alt="" /></a>
+              <a href=""><img src="./Worksection Pics/Counter.png" alt="" /></a>
               <a href="" class="role"><h6 class="roletext">Back End Dev</h6></a>
-              <a href=""><img src="/Worksection Pics/Counter.png" alt="" /></a>
+              <a href=""><img src="./Worksection Pics/Counter.png" alt="" /></a>
               <a href="" class="year"><h6 class="yeartext">2015</h6></a>
             </div>
           </li>
@@ -197,19 +197,19 @@
 
       <ul class="social-container">
         <li>
-          <a href=""><img src="/Pictures/Social/github.png" alt="" /></a>
+          <a href=""><img src="./Pictures/Social/github.png" alt="" /></a>
         </li>
         <li>
-          <a href=""><img src="/Pictures/Social/linkedin.png" alt="" /></a>
+          <a href=""><img src="./Pictures/Social/linkedin.png" alt="" /></a>
         </li>
         <li>
-          <a href=""><img src="/Pictures/Social/victory.png" alt="" /></a>
+          <a href=""><img src="./Pictures/Social/victory.png" alt="" /></a>
         </li>
         <li>
-          <a href=""><img src="/Pictures/Social/twitter.png" alt="" /></a>
+          <a href=""><img src="./Pictures/Social/twitter.png" alt="" /></a>
         </li>
         <li>
-          <a href=""><img src="/Pictures/Social/m.png" alt="" /></a>
+          <a href=""><img src="./Pictures/Social/m.png" alt="" /></a>
         </li>
       </ul>
       <a class="btn1">Get my resume</a>
@@ -221,17 +221,17 @@
         </div>
 
         <div class="lang-divs" id="lang">
-          <img src="/Languages Pictures/JS.png" alt="" />
+          <img src="./Languages Pictures/JS.png" alt="" />
           <h6>Javascript</h6>
         </div>
 
         <div class="lang-divs" id="lang">
-          <img src="/Languages Pictures/HTML.png" alt="" />
+          <img src="./Languages Pictures/HTML.png" alt="" />
           <h6>HTML</h6>
         </div>
 
         <div class="lang-divs" id="lang">
-          <img src="/Languages Pictures/CSS.png" alt="" />
+          <img src="./Languages Pictures/CSS.png" alt="" />
           <h6>CSS</h6>
         </div>
 
@@ -242,7 +242,7 @@
         <div class="lang-skills">
           <img
             class="lang-seperator"
-            src="/Languages Pictures/Separator Bottom.png"
+            src="./Languages Pictures/Separator Bottom.png"
             alt=""
           />
         </div>
@@ -254,7 +254,7 @@
         <div class="lang-skills">
           <img
             class="lang-seperator"
-            src="/Languages Pictures/Separator Bottom.png"
+            src="./Languages Pictures/Separator Bottom.png"
             alt=""
           />
         </div>
