--- a/index.html
+++ b/index.html
@@ -5,7 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css" />
-
+    <script
+      src="https://kit.fontawesome.com/a5120177aa.js"
+      crossorigin="anonymous"
+    ></script>
     <title>Portfolio Website</title>
   </head>
 
@@ -181,43 +184,47 @@
         </ul>
       </article>
     </section>
-    <section class="about">
-      <h2>
-        About <br />
-        Myself
-      </h2>
 
-      <p>
-        Hello I’m a software developer! I can help you build a product , feature
-        or website Look through some of my work and experience! If you like what
-        you see and have a project you need coded, don’t hestiate to contact me.
-      </p>
+    <section class="about-container">
+      <section class="about">
+        <h2>
+          About <br />
+          Myself
+        </h2>
 
-      <h6>LET'S CONNECT</h6>
+        <p>
+          Hello I’m a software developer! I can help you build a product ,
+          feature or website Look through some of my work and experience! If you
+          like what you see and have a project you need coded, don’t hestiate to
+          contact me.
+        </p>
 
-      <ul class="social-container">
-        <li>
-          <a href=""><img src="./Pictures/Social/github.png" alt="" /></a>
-        </li>
-        <li>
-          <a href=""><img src="./Pictures/Social/linkedin.png" alt="" /></a>
-        </li>
-        <li>
-          <a href=""><img src="./Pictures/Social/victory.png" alt="" /></a>
-        </li>
-        <li>
-          <a href=""><img src="./Pictures/Social/twitter.png" alt="" /></a>
-        </li>
-        <li>
-          <a href=""><img src="./Pictures/Social/m.png" alt="" /></a>
-        </li>
-      </ul>
-      <a class="btn1">Get my resume</a>
+        <h6>LET'S CONNECT</h6>
+
+        <ul class="social-container">
+          <li>
+            <a href=""><img src="./Pictures/Social/github.png" alt="" /></a>
+          </li>
+          <li>
+            <a href=""><img src="./Pictures/Social/linkedin.png" alt="" /></a>
+          </li>
+          <li>
+            <a href=""><img src="./Pictures/Social/victory.png" alt="" /></a>
+          </li>
+          <li>
+            <a href=""><img src="./Pictures/Social/twitter.png" alt="" /></a>
+          </li>
+          <li>
+            <a href=""><img src="./Pictures/Social/m.png" alt="" /></a>
+          </li>
+        </ul>
+        <a class="btn1">Get my resume</a>
+      </section>
 
       <section class="languages">
         <div class="lang-divs">
           <h3>Languages</h3>
-          <div class="lang-arrow-down"></div>
+          <i class="fa-solid fa-chevron-down"></i>
         </div>
 
         <div class="lang-divs" id="lang">
@@ -237,29 +244,22 @@
 
         <div class="lang-skills">
           <h3>Frameworks</h3>
-          <div class="lang-arrow-right1"></div>
+          <i class="fa-solid fa-chevron-right"></i>
         </div>
-        <div class="lang-skills">
-          <img
-            class="lang-seperator"
-            src="./Languages Pictures/Separator Bottom.png"
-            alt=""
-          />
+        <div class="lang-seperators">
+          <img src="./Languages Pictures/Separator Bottom.png" alt="" />
         </div>
 
         <div class="lang-skills">
           <h3>Skills</h3>
-          <div class="lang-arrow-right2"></div>
+          <i class="fa-solid fa-chevron-right"></i>
         </div>
-        <div class="lang-skills">
-          <img
-            class="lang-seperator"
-            src="./Languages Pictures/Separator Bottom.png"
-            alt=""
-          />
+        <div class="lang-seperators">
+          <img src="./Languages Pictures/Separator Bottom.png" alt="" />
         </div>
       </section>
     </section>
+
     <footer class="contact-me">
       <h3>Contact me</h3>
 
