Add media query to Hero section

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       <nav>
         <a href=""><img src="./Pictures/My Logo.png" alt="" /> </a>
         <a href="">
-          <img src="./Pictures/Union.png" alt="Menu bar" />
+          <img class="burger-menu" src="./Pictures/Union.png" alt="Menu bar" />
         </a>
       </nav>
     </header>
@@ -26,9 +26,7 @@
       <h1>
         I'm Nabeel
         <br />
-        Glad to see
-        <br />
-        you!
+        Glad to see you!
       </h1>
 
       <p>
