Add Media query to Header and created Navbar

--- a/index.html
+++ b/index.html
@@ -15,7 +15,14 @@
   <body>
     <header id="toolbar">
       <nav>
-        <a href=""><img src="./Pictures/My Logo.png" alt="" /> </a>
+        <a class="logo-nav" href=""
+          ><img src="./Pictures/My Logo.png" alt="" />
+        </a>
+        <ul>
+          <li>Portfolio</li>
+          <li>About</li>
+          <li>Contact</li>
+        </ul>
         <a href="">
           <img class="burger-menu" src="./Pictures/Union.png" alt="Menu bar" />
         </a>
