--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
     </section>
 
     <section class="work">
-      <article class="card">
+      <article class="card" id="work-article-1">
         <a href="" class="snapshot">
           <img src="./Worksection Pics/snap1.png" alt="" />
         </a>
@@ -95,11 +95,11 @@
           </li>
         </ul>
       </article>
-      <article class="card">
-        <a href="" class="snapshot">
+      <article class="card" id="work-article-2">
+        <a href="" class="snapshot" id="swap-pos">
           <img src="./Worksection Pics/snap2.png" alt="" />
         </a>
-        <ul class="leftblock2">
+        <ul class="leftblock2" id="pos-swap">
           <li .primarytext>
             <h2>Multi-Post Stories</h2>
             <div class="frame">
@@ -126,7 +126,7 @@
           </li>
         </ul>
       </article>
-      <article class="card">
+      <article class="card" id="work-article-3">
         <a href="" class="snapshot">
           <img src="./Worksection Pics/snap3.png" alt="" />
         </a>
@@ -157,11 +157,11 @@
           </li>
         </ul>
       </article>
-      <article class="card">
-        <a href="" class="snapshot">
+      <article class="card" id="work-article-4">
+        <a href="" class="snapshot" id="swap-pos">
           <img src="./Worksection Pics/snap4.png" alt="" />
         </a>
-        <ul class="leftblock2">
+        <ul class="leftblock2" id="pos-swap">
           <li .primarytext>
             <h2>Multi-Post Stories</h2>
             <div class="frame">
